fixed issue with cart window aligning to left side on chrome

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -651,15 +651,21 @@ aside .aside-dialog .aside-footer:before,
 /*
  * Aside element
  */
+.aside.right {
+    right: 0px;
+    left: auto;
+}
+
 .aside {
     position: fixed;
-    top: 0;
-    bottom: 0;
+    top: 0px;
+    bottom: 0px;
     z-index: 1049;
     overflow: auto;
     min-width: 340px;
-    background: white;
+    background: #FFF none repeat scroll 0% 0%;
 }
+
 .aside:focus {
     outline: none;
 }
@@ -670,119 +676,3 @@ aside .aside-dialog .aside-footer:before,
     }
 }
 
-.aside.left {
-    right: auto;
-    left: 0;
-}
-.aside.right {
-    right: 0;
-    left: auto;
-}
-.aside .aside-dialog .aside-header {
-    padding: 15px;
-    border-bottom: 1px solid #e5e5e5;
-    min-height: 16.42857143px;
-    padding: 6px 15px;
-    background: #337ab7;
-    color: white;
-}
-.aside .aside-dialog .aside-header .close {
-    margin-right: -8px;
-    padding: 4px 8px;
-    color: white;
-    font-size: 25px;
-    opacity: .8;
-}
-.aside .aside-dialog .aside-body {
-    position: relative;
-    padding: 15px;
-}
-.aside .aside-dialog .aside-footer {
-    padding: 15px;
-    text-align: right;
-    border-top: 1px solid #e5e5e5;
-}
-.aside .aside-dialog .aside-footer .btn + .btn {
-    margin-left: 5px;
-    margin-bottom: 0;
-}
-.aside .aside-dialog .aside-footer .btn-group .btn + .btn {
-    margin-left: -1px;
-}
-.aside .aside-dialog .aside-footer .btn-block + .btn-block {
-    margin-left: 0;
-}
-.aside-backdrop {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1040;
-    background-color: rgba(0, 0, 0, 0.5);
-}.aside-backdrop.fade {
-    opacity: 0;
-    filter: alpha(opacity=0);
-}
-.aside-backdrop.in {
-    opacity: 0.5;
-    filter: alpha(opacity=50);
-}
-
-
-.am-slide-right {
-    -webkit-animation-duration: 0.3s;
-    animation-duration: 0.3s;
-    -webkit-animation-timing-function: ease-in-out;
-    animation-timing-function: ease-in-out;
-    -webkit-animation-fill-mode: backwards;
-    animation-fill-mode: backwards;
-}
-.am-slide-right.am-slide-right-add,
-.am-slide-right.ng-hide-remove,
-.am-slide-right.ng-move {
-    -webkit-animation-name: slideFromRight;
-    animation-name: slideFromRight;
-}
-.am-slide-right.am-slide-right-remove,
-.am-slide-right.ng-hide {
-    -webkit-animation-name: slideToRight;
-    animation-name: slideToRight;
-}
-.am-slide-right.ng-enter {
-    visibility: hidden;
-    -webkit-animation-name: slideFromRight;
-    animation-name: slideFromRight;
-    -webkit-animation-play-state: paused;
-    animation-play-state: paused;
-}
-.am-slide-right.ng-enter.ng-enter-active {
-    visibility: visible;
-    -webkit-animation-play-state: running;
-    animation-play-state: running;
-}
-.am-slide-right.ng-leave {
-    -webkit-animation-name: slideToRight;
-    animation-name: slideToRight;
-    -webkit-animation-play-state: paused;
-    animation-play-state: paused;
-}
-.am-slide-right.ng-leave.ng-leave-active {
-    -webkit-animation-play-state: running;
-    animation-play-state: running;
-}
-
-
-.collapsing {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    -webkit-transform: translateZ(0);
-    -webkit-transition: height 0.35s ease 1s linear;
-    -moz-transition: height 0.35s ease 1s linear;
-    -o-transition: height 0.35s ease 1s linear;
-    -ms-transition: height 0.35s ease 1s linear;
-    transition: height 0.35s ease 1s linear;
-    -webkit-transition: height 0.35s ease;
-    transition: height 0.35s ease;
-}
